[gd_scene load_steps=77 format=2]

[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/21.png" type="Texture" id=1]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/23.png" type="Texture" id=2]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/27.png" type="Texture" id=3]
[ext_resource path="res://src/Scenes/Levels/Castle/Castle_World.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Cameras/2_Player_Zooming_Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/9.png" type="Texture" id=6]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/34.png" type="Texture" id=7]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/1.png" type="Texture" id=8]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/15.png" type="Texture" id=9]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/14.png" type="Texture" id=10]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/22.png" type="Texture" id=11]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/11.png" type="Texture" id=12]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/35.png" type="Texture" id=13]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/22.png" type="Texture" id=14]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/20.png" type="Texture" id=15]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/19.png" type="Texture" id=16]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/33.png" type="Texture" id=17]
[ext_resource path="res://src/Test_Level/Player2.gd" type="Script" id=18]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/6.png" type="Texture" id=19]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/10.png" type="Texture" id=20]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/7.png" type="Texture" id=21]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/8.png" type="Texture" id=22]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/4.png" type="Texture" id=23]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/9.png" type="Texture" id=24]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/10.png" type="Texture" id=25]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/6.png" type="Texture" id=26]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/30.png" type="Texture" id=27]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/38.png" type="Texture" id=28]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/13.png" type="Texture" id=29]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/37.png" type="Texture" id=30]
[ext_resource path="res://src/Test_Level/Player.gd" type="Script" id=31]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/15.png" type="Texture" id=32]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/11.png" type="Texture" id=33]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/32.png" type="Texture" id=34]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/24.png" type="Texture" id=35]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/5.png" type="Texture" id=36]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/16.png" type="Texture" id=37]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/26.png" type="Texture" id=38]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/20.png" type="Texture" id=39]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/8.png" type="Texture" id=40]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/26.png" type="Texture" id=41]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/18.png" type="Texture" id=42]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/24.png" type="Texture" id=43]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/2.png" type="Texture" id=44]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/19.png" type="Texture" id=45]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/3.png" type="Texture" id=46]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/4.png" type="Texture" id=47]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/5.png" type="Texture" id=48]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/28.png" type="Texture" id=49]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/16.png" type="Texture" id=50]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/25.png" type="Texture" id=51]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/2.png" type="Texture" id=52]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/17.png" type="Texture" id=53]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/13.png" type="Texture" id=54]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/21.png" type="Texture" id=55]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/23.png" type="Texture" id=56]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/12.png" type="Texture" id=57]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/14.png" type="Texture" id=58]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/25.png" type="Texture" id=59]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/3.png" type="Texture" id=60]
[ext_resource path="res://src/Sprites/1-Player-Bomb Guy/1-Idle/1.png" type="Texture" id=61]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/12.png" type="Texture" id=62]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/36.png" type="Texture" id=63]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/18.png" type="Texture" id=64]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/31.png" type="Texture" id=65]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/29.png" type="Texture" id=66]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/17.png" type="Texture" id=67]
[ext_resource path="res://src/Sprites/4-Enemy-Big Guy/1-Idle/7.png" type="Texture" id=68]
[ext_resource path="res://src/Objects/Bomb.tscn" type="PackedScene" id=69]
[ext_resource path="res://src/Objects/PlayerHUD.tscn" type="PackedScene" id=70]
[ext_resource path="res://src/Sounds/explosion.wav" type="AudioStream" id=71]
[ext_resource path="res://src/Sounds/jump.wav" type="AudioStream" id=72]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 26 ), ExtResource( 68 ), ExtResource( 40 ), ExtResource( 6 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 62 ), ExtResource( 29 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 50 ), ExtResource( 67 ), ExtResource( 64 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 35 ), ExtResource( 51 ), ExtResource( 41 ), ExtResource( 3 ), ExtResource( 49 ), ExtResource( 66 ), ExtResource( 27 ), ExtResource( 65 ), ExtResource( 34 ), ExtResource( 17 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 63 ), ExtResource( 30 ), ExtResource( 28 ) ],
"loop": true,
"name": "Big_Guy_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 52 ), ExtResource( 60 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 33 ), ExtResource( 57 ), ExtResource( 54 ), ExtResource( 58 ), ExtResource( 32 ), ExtResource( 37 ), ExtResource( 53 ), ExtResource( 42 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 55 ), ExtResource( 14 ), ExtResource( 56 ), ExtResource( 43 ), ExtResource( 59 ), ExtResource( 38 ) ],
"loop": true,
"name": "Bomber_Man_Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5, 28.5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 26 ), ExtResource( 68 ), ExtResource( 40 ), ExtResource( 6 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 62 ), ExtResource( 29 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 50 ), ExtResource( 67 ), ExtResource( 64 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 35 ), ExtResource( 51 ), ExtResource( 41 ), ExtResource( 3 ), ExtResource( 49 ), ExtResource( 66 ), ExtResource( 27 ), ExtResource( 65 ), ExtResource( 34 ), ExtResource( 17 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 63 ), ExtResource( 30 ), ExtResource( 28 ) ],
"loop": true,
"name": "Big_Guy_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 52 ), ExtResource( 60 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 33 ), ExtResource( 57 ), ExtResource( 54 ), ExtResource( 58 ), ExtResource( 32 ), ExtResource( 37 ), ExtResource( 53 ), ExtResource( 42 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 55 ), ExtResource( 14 ), ExtResource( 56 ), ExtResource( 43 ), ExtResource( 59 ), ExtResource( 38 ) ],
"loop": true,
"name": "Bomber_Man_Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.5, 28.5 )

[node name="Castle_Level" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 164, 351 )
script = ExtResource( 31 )
__meta__ = {
"_edit_group_": true
}
speed = Vector2( 400, 1200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 1, 0 )
frames = SubResource( 1 )
animation = "Bomber_Man_Idle"
frame = 25
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 1, 0.5 )
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="Player"]

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 1760, 344 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}
speed = Vector2( 400, 1200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player2"]
position = Vector2( 1, 0 )
frames = SubResource( 3 )
animation = "Big_Guy_Idle"
frame = 24
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( -5.5, 7 )
shape = SubResource( 4 )

[node name="Node2D" type="Node2D" parent="Player2"]

[node name="World" parent="." instance=ExtResource( 4 )]
show_behind_parent = true

[node name="Level_View" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 1.87, 2.13 )

[node name="2_Player_Zooming_Camera" parent="." instance=ExtResource( 5 )]
scale = Vector2( 5.12, 1 )
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1280
Player = NodePath("../Player")
Player2 = NodePath("../Player2")
min_zoom = 0.8

[node name="Bombs" type="Node2D" parent="."]

[node name="PlayerBomb" parent="Bombs" instance=ExtResource( 69 )]
position = Vector2( 87, -128 )

[node name="Player2Bomb" parent="Bombs" instance=ExtResource( 69 )]
position = Vector2( 248, -128 )

[node name="PlayerHUD" parent="." instance=ExtResource( 70 )]
__meta__ = {
"_edit_group_": true
}

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 71 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 72 )
